@@ -6,8 +6,9 @@ Version 0.3.1
   the wiki.
 - Clickable links/buttons that might open the internal image viewer can be
   forced to be opened in the browser instead by holding Control (Command on
-  Macs) when clicking the link/button. This is helpful to get around
-  OutOfMemoryErrors when trying to load large images.
+  Macs) when clicking the link/button. OutOfMemoryErrors occur when trying to
+  load large images. If this happens the link will automatically open in the
+  browser.
 - Added GHA for PC for completeness.
 - Added additional sorting options (artist, genre, decade) for Guitar Hero
   games. This data is gathered from the ScoreHero Wiki page for that song.
